test/resources/parser/failing/zomtest12.scala
object InvalidIntegers {
  val x: Int = 12345678901234567890;
  x
}